// Vitest Snapshot v1

exports[`<EditTarget /> > should render 1`] = `
<Modal
  label="Edit Target"
  onEnter={[Function]}
  onHide={[MockFunction spy]}
  show={true}
  size="sm"
>
  <ModalHeader>
    Edit Target
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <ModalBody>
      <TargetForm
        description="Bar description"
        errorName=""
        length={490}
        name="Bar"
        onChange={[Function]}
        required={true}
      />
    </ModalBody>
    <ModalFooter>
      <Button
        color="blue"
        icon="save"
        type="submit"
      >
        Submit
      </Button>
    </ModalFooter>
  </form>
</Modal>
`;

exports[`<EditTarget /> > should render error when submitted without name 1`] = `
<Modal
  label="Edit Target"
  onEnter={[Function]}
  onHide={[MockFunction spy]}
  show={true}
  size="sm"
>
  <ModalHeader>
    Edit Target
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <ModalBody>
      <TargetForm
        description="This is a test"
        errorName="Required field"
        length={310}
        name=""
        onChange={[Function]}
        required={false}
      />
    </ModalBody>
    <ModalFooter>
      <Button
        color="blue"
        icon="save"
        type="submit"
      >
        Submit
      </Button>
    </ModalFooter>
  </form>
</Modal>
`;

exports[`<EditTarget /> > should update when TargetForm onChange() prop called 1`] = `
<Modal
  label="Edit Target"
  onEnter={[Function]}
  onHide={[MockFunction spy]}
  show={true}
  size="sm"
>
  <ModalHeader>
    Edit Target
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <ModalBody>
      <TargetForm
        description="Bar description"
        errorName=""
        length={490}
        name="Foo"
        onChange={[Function]}
        required={true}
      />
    </ModalBody>
    <ModalFooter>
      <Button
        color="blue"
        icon="save"
        type="submit"
      >
        Submit
      </Button>
    </ModalFooter>
  </form>
</Modal>
`;
